# Todo-App

./: CMakeLists.txt  app.h  main.cpp
include/: app.h  file.h  graphics.h  node.h  scene.h  shader.h  theme.h  types.h  window.h
include/glad/: glad.h
include/widgets/: pill.h  widget.h
shaders/: circle.fs  image.fs  square.fs  square.vs
src/: app.cpp  file.cpp  glad.c  graphics.cpp  main.cpp  node.cpp  scene.cpp  shader.cpp  theme.cpp  window.cpp
src/widgets/: pill.cpp  widget.cpp
